# dfa-engine

./: README.md  package.json
Rust/: .gitignore  Cargo.toml
Rust/src/: dfa.rs  error.rs  lib.rs  types.rs
Rust/src/tests/: dfa_test.rs
Rust/tests/: dfa_test.rs
TypeScript/: README.md  package.json
TypeScript/src/: types.ts
TypeScript/src/__tests__/: dfa.test.ts
src/: dfa.ts  errors.ts  index.ts
src/__tests__/: dfa.test.ts
